project(amlMpMediaPlayerDemo)

SET(AML_MP_DEMO_SRC
    AmlMpMediaPlayerDemo.cpp
)

SET(TARGET amlMpMediaPlayerDemo)

ADD_EXECUTABLE(${TARGET} ${AML_MP_DEMO_SRC})

TARGET_INCLUDE_DIRECTORIES(${TARGET} PRIVATE ../amlMpTestSupporter)

TARGET_LINK_LIBRARIES(${TARGET} PUBLIC aml_mp_sdk)
TARGET_LINK_LIBRARIES(${TARGET} PUBLIC aml_mp_mediaplayer)
TARGET_LINK_LIBRARIES(${TARGET} PUBLIC amlMpTestSupporter)
TARGET_LINK_LIBRARIES(${TARGET} PUBLIC pthread)


#TARGET_INCLUDE_DIRECTORIES(${TARGET} PRIVATE ../amlMpTestSupporter)

#TARGET_LINK_LIBRARIES(${TARGET} PUBLIC amlMpTestSupporter)

INSTALL(
    TARGETS ${TARGET}
)
